refactor applications endpoints, validation and response
